feat: 1.梳理页面路由; 2.新增任务和课程两个模块;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     "src/setupTests.ts",
     "tslint:latest",
     "tslint-config-prettier",
-    "node/routers",
+    "node",
     "src/models",
+
   ]
 }
