--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
     "lodash": "^4.17.15",
