feat: 优化创建人群下一步判断逻辑;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "src/setupTests.ts",
     "tslint:latest",
     "tslint-config-prettier",
-    "node",
+    "node/api",
     "src/models",
 
   ]
