--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lodash": "^4.17.15",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
+    "mongoose": "^5.7.11",
     "numeral": "^2.0.6",
     "omit.js": "^1.0.2",
     "path-to-regexp": "^3.1.0",
