--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
     "prettier": "prettier -c --write \"**/*\"",
     "start": "umi dev",
-    "node": "node node/index.ts",
+    "node": "nodemon node/index.ts",
     "start:no-mock": "cross-env MOCK=none umi dev",
     "test": "umi test",
     "test:all": "node ./tests/run-tests.js",
@@ -111,6 +111,7 @@
     "lint-staged": "^9.0.0",
     "mockjs": "^1.0.1-beta3",
     "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.1",
     "prettier": "^1.17.1",
     "pro-download": "1.0.1",
     "stylelint": "^10.1.0",
